<resources>
    <string name="app_name">IT21012624 supplementary assessment</string>
    <string name="loer">LOER</string>
    <string name="coffeeShop">Coffee Shop</string>
    <string name="email">Email:</string>
    <string name="Email">coffee@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="password">Password:</string>
    <string name="Password">abc@123</string>
    <string name="login">Login</string>
    <string name="notAccount">Do not have account?</string>
    <string name="signup">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="username">User Name</string>
    <string name="Username">username</string>
    <string name="editprofile">EDIT</string>
    <string name="editProfile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="updateProfile">Update Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="my_order">My Order</string>
    <string name="account">Account</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="my_order_fragment">My Order Fragment</string>
    <string name="quote">Coffee - Makes you Love</string>
    <string name="quote2">A Lot Can Happen Over Coffee, Its Awesome!!!</string>
    <string name="getStarted">"Get Started "</string>
    <string name="start">Get Started</string>
    <string name="coffee1">Black Coffee</string>
    <string name="coffee">Brewed Coffe</string>
    <string name="Coffee">Brewd Coffee</string>
    <string name="Todo">TODO</string>
    <string name="price2">Rs. 410.00</string>
    <string name="order">Order</string>
    <string name="coffee2">Cappuccino</string>
    <string name="price1">Rs. 350.00</string>
    <string name="todo1">TODO</string>
    <string name="coffee3">Caffe Mocha</string>
    <string name="price3">Rs. 450.00</string>
    <string name="coffee4">Caramel Latte</string>
    <string name="price4">Rs. 470.00</string>
    <string name="coffee5">Hot Chocolate</string>
    <string name="price5">Rs. 480.00</string>
    <string name="coffee6">Chai Tea Latte</string>
    <string name="price6">Rs. 430.00</string>
    <string name="coffee7">Vanila Latte/Creme Brulee Latte</string>
    <string name="coffee8">Hot Teas</string>
    <string name="price8">Rs. 350.00</string>
    <string name="price7">Rs. 500.00</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="profileMangement">Profile Management</string>
    <string name="add">Add</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>