<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home2"
    android:orientation="vertical"
    tools:context=".Home" >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="3dp"
        android:text="@string/quote"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/quote2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#BB6A50"
        android:text="@string/start" />

</LinearLayout>